# gazebo_simulation_for_human_conting

./: .gitignore
custom_messages/: CMakeLists.txt  package.xml
custom_messages/include/custom_messages/: detected_objects_display.hpp
custom_messages/launch/: detected_objects_visualizer.launch.xml
custom_messages/msg/: DetectedObject.msg  DetectedObjects.msg
custom_messages/src/: detected_objects_display.cpp  detected_objects_visualizer.cpp
sim_analyze/: analyze_simdata.ipynb
simulation/: CMakeLists.txt  package.xml
simulation/config/: detected_objects_bridge_robot1.yaml  detected_objects_bridge_robot2.yaml  diff_drive_allrobot.yaml  diff_drive_robot1.yaml  diff_drive_robot2.yaml  diff_drive_ros2_control_controllers.yaml  gazebo_domain_bridge.yaml  joint_position_control.yaml  mux.yaml  ring_ground_filter.yaml
simulation/include/journal1-sim/: multi_robot_object_detection_merger.hpp
simulation/launch/: autoware.xml  background_substraction.launch  clustering.launch  detected_object_merger.launch.xml  diff_drive_controller.launch.py  human.launch.xml  human_teleop.launch  joy_twist_converter.launch.xml  map.launch  multi_robot_diff_drive_controller.launch.xml  multi_robot_simulation.launch.py  multi_robot_simulation.launch.xml  ndt_matching.launch  people_counter.launch.xml  ring_fit.launch  robot_state_publisher.launch.py  setups_teleop.launch  simulation.launch.py  simulation.launch.xml  simulation_ros2_control.launch.py  spawn_in_gazebo.launch.py  spawn_with_control.launch.xml  start_gazebo.launch.xml  start_robot.launch.py  start_world.launch.py  urdf_test.launch.py
simulation/rviz/: simulation.rviz  simulation_ros2.rviz
simulation/src/: joy_twist_publisher.cpp  multi_robot_object_detection_merger.cpp  receive_detected_objects.cpp  visualize_marker_of_objects.cpp
simulation/urdf/: VLP-16.urdf.xacro  human.urdf.xacro  test.urdf  wheel.urdf.xacro  wheel_robot_base.urdf  wheel_robot_base.urdf.xacro
simulation/urdf/person_cylinder/: model.config  model.sdf
simulation/urdf/smagv/: smagv.urdf.xacro
simulation/world/: many_people.world  map.pcd  map2.pcd  memo.world  normal.world  people_count.world  simulation.world  skelton_many_people.world  test.world
